syntax = "proto3";

package proto.services.property_svc.v1;

option go_package = "gen/proto/services/property-svc";


message FilterUpdate {
  // append property_id to the always_include list
  // this means the property is shown, unless a more specific rule (including itself)
  // puts it in its dont_always_include list
  repeated string append_to_always_include = 1;

  // remove property_id to the always_include list, also see append_to_always_include
  repeated string remove_from_always_include = 2;

  // append property_id to the dont_always_include list, also see append_to_always_include
  repeated string append_to_dont_always_include = 3;

  // remove property_id to the dont_always_include list, also see append_to_always_include
  repeated string remove_from_dont_always_include = 4;
}

message UpdateTaskPropertyViewRuleRequest {
  /* task-specific matchers */
  optional string ward_id = 1;
  optional string task_id = 2;

  FilterUpdate filter_update = 3;
}

message UpdateTaskPropertyViewRuleResponse {}

service PropertyViewsService {
  rpc UpdateTaskPropertyViewRule (UpdateTaskPropertyViewRuleRequest) returns (UpdateTaskPropertyViewRuleResponse) {}
}
